--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
-  "license": "",
+  "name": "cave_innovations_photo_carousel",
+  "version": "1.1.0",
+  "description": "Reservation Component for Cave Innovations Website",
+  "author": "Cave Innovations",
+  "license": "UNLICENSED",
   "engines": {
     "node": ">=6.13.0"
   },
