--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "start": "nodemon ./server/server.js"
+    "start": "nodemon ./server/server.js",
+    "seed": "node ./db/seed.js"
   },
   "dependencies": {
+    "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
     "path": "^0.12.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
@@ -24,7 +28,13 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "eslint": "^6.2.1",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
   }
