--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed": "node ./db/seed.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
