--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
     "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "morgan": "^1.9.1",
