--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "path": "^0.12.7",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "styled-components": "^4.3.2"
