--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "jest-styled-components": "^6.3.3",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "path": "^0.12.7",
@@ -64,6 +65,10 @@
       "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js",
       "^react(.*)$": "<rootDir>/vendor/react-master$1",
       "^config$": "<rootDir>/configs/app-config.js"
-    }
+    },
+    "globals": {
+      "window": {}
+    },
+    "test-environment": "node"
   }
 }
