--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dev": "webpack -d --watch",
     "start": "nodemon ./server/server.js",
     "seed": "node ./db/seed.js",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "dependencies": {
     "axios": "^0.19.0",
