--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "start": "nodemon ./server/server.js",
+    "startdev": "nodemon ./server/server.js",
+    "start":"node ./server/server.js",
     "seed": "node ./db/seed.js",
     "test": "jest --coverage"
   },
@@ -17,6 +18,7 @@
     "axios": "^0.19.0",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "express": "^4.17.1",
