--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "startdev": "nodemon ./server/server.js",
-    "start":"node ./server/server.js",
+    "start": "node ./server/server.js",
     "seed": "node ./db/seed.js",
     "test": "jest --coverage"
   },
@@ -18,6 +18,7 @@
     "axios": "^0.19.0",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -33,12 +34,13 @@
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
+    "router": "^1.3.3",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
-    "jest": "^24.9.0",
+    "compression-webpack-plugin": "^3.0.0",
     "eslint": "^6.2.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
@@ -46,6 +48,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "jest": "^24.9.0",
+    "terser-webpack-plugin": "^2.0.1",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
   },
